--- a/TaskIt.Dotnet.Versions/TaskIt.Dotnet.Versions.csproj
+++ b/TaskIt.Dotnet.Versions/TaskIt.Dotnet.Versions.csproj
@@ -8,6 +8,7 @@
     <ToolCommandName>dotnet-versions</ToolCommandName>
     <PackageOutputPath>../nupkg</PackageOutputPath>
     <!-- -->
+    <Version>1.0.0</Version>
     <Description>
       Simple Tool for setting / modifying versions in *.sln or *.csproj files.
     </Description>
